package edu.fiuba.algo3.modelo;

public class Country {
    private String name;


    public Country(String name) {
        this.name = name;
    }
}
