package edu.fiuba.algo3.modelo;

public class Map {
    private Country Pais1;
    private Country Pais2;
}
